--- a/src/Add-new/addnew.html
+++ b/src/Add-new/addnew.html
@@ -12,47 +12,87 @@
   </head>
   <body>
     <div class="icon-bar">
-      <a href="https://www.facebook.com/nostresstravelguide" class="facebook"><img
-        src="images/fb.svg"
-        width="30"
-        height="30"
-        class="icon"
-        alt="Facebook"
+      <a href="https://www.facebook.com/nostresstravelguide" class="facebook"
+        ><img
+          src="images/fb.svg"
+          width="30"
+          height="30"
+          class="icon"
+          alt="Facebook"
       /></a>
-      <a href="https://www.instagram.com/nostresstravelguide/" class="instagram"><img
-        src="images/instagram.svg"
-        width="30"
-        height="30"
-        class="icon"
-        alt="Instagram"
+      <a href="https://www.instagram.com/nostresstravelguide/" class="instagram"
+        ><img
+          src="images/instagram.svg"
+          width="30"
+          height="30"
+          class="icon"
+          alt="Instagram"
       /></a>
-      <a href="nostresstravelguide@gmail.com " class="email"><img
-        src="images/email.svg"
-        width="30"
-        height="30"
-        class="icon"
-        alt="email"
+      <a href="nostresstravelguide@gmail.com " class="email"
+        ><img
+          src="images/email.svg"
+          width="30"
+          height="30"
+          class="icon"
+          alt="email"
       /></a>
     </div>
 
     <h1>Add new!</h1>
     <p class="intro">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis tempore dolor, maxime iure eos impedit veritatis. Eveniet optio obcaecati quos impedit error magnam voluptatem perferendis consequuntur similique illo! Rerum debitis dolorum quo beatae rem at velit, omnis maxime ipsam necessitatibus non, harum minima nostrum impedit autem, ut voluptas corrupti! Ipsum.
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis tempore
+      dolor, maxime iure eos impedit veritatis. Eveniet optio obcaecati quos
+      impedit error magnam voluptatem perferendis consequuntur similique illo!
+      Rerum debitis dolorum quo beatae rem at velit, omnis maxime ipsam
+      necessitatibus non, harum minima nostrum impedit autem, ut voluptas
+      corrupti! Ipsum.
     </p>
 
-<form> 
-  <label> 
-    <input type="text" name="name"/> 
-  </label>
- <div class="add__name">
-   
- </div>
- <div class="add__category"></div>
- <div class="add__descriptio"></div>
- <div class="add__website"></div>
- <div class="add__address"></div>
-<fomr>
-
-
+    <form>
+      <div>
+        <label>
+          <input type="text" name="name" />
+          ADD NAME
+        </label>
+      </div>
+      <div>
+        <label>
+          SELECT CATEGORY:<br />
+          <select>
+            <option value="meTime">Me Time</option>
+            <option value="mustDo">Must Do</option>
+            <option value="restaurant">Food/Drinks</option>
+            <option value="accomodation">Accomodation</option>
+          </select>
+        </label>
+      </div>
+      <div>
+        <label>
+          <input type="text" name="name" />
+          ADD DESCRIPTION
+        </label>
+      </div>
+      <div>
+        <label>
+          <input type="url" name="name" />
+          ADD WEBSITE
+        </label>
+      </div>
+      <div>
+        <label>
+          <input type="number" name="name" />
+          ADD ADDRESS
+        </label>
+      </div>
+      <div>
+        <label>
+          <input type="number" name="name" />
+          ADD LATITUDE, LONGTITUDE
+        </label>
+      </div>
+      <div>
+        <button type="submit">SUBMIT</button>
+      </div>
+    </form>
   </body>
 </html>
