--- a/src/AddNew/addnew.html
+++ b/src/AddNew/addnew.html
@@ -94,5 +94,6 @@
         <button type="submit">SUBMIT</button>
       </div>
     </form>
+    <footer className="footer">Czechitas project 2020</footer>
   </body>
 </html>
