--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,37 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="About no stress travellers project" />
-    <meta name="keywords" content="travelling, woman, about" />
-
+    <!-- Primary Meta Tags -->
+    <title>No-Stress travel guide</title>
+    <meta name="title" content="No-Stress travel guide" />
+    <meta
+      name="description"
+      content="The new platform for sharing travelling tips and tricks between adventurous girls! Share your travel experiences with others."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="No-Stress travel guide" />
+    <meta
+      property="og:description"
+      content="The new platform for sharing travelling tips and tricks between adventurous girls! Share your travel experiences with others."
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="No-Stress travel guide" />
+    <meta
+      property="twitter:description"
+      content="The new platform for sharing travelling tips and tricks between adventurous girls! Share your travel experiences with others."
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
     <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +55,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sail&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>No stress travel guide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
