--- a/public/index.html
+++ b/public/index.html
@@ -14,28 +14,19 @@
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
     <meta property="og:title" content="No-Stress travel guide" />
     <meta
       property="og:description"
-      content="The new platform for sharing travelling tips and tricks between adventurous girls! Share your travel experiences with others."
+      content="The new platform for sharing travelling tips and tricks between adventurous girls! Visit and share your travel experiences with others."
     />
-    <meta
-      property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-    />
+    <meta property="fb:nostresstravelguide" content="nostresstravelguide" />
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
     <meta property="twitter:title" content="No-Stress travel guide" />
     <meta
       property="twitter:description"
-      content="The new platform for sharing travelling tips and tricks between adventurous girls! Share your travel experiences with others."
+      content="The new platform for sharing travelling tips and tricks between adventurous girls! Visit and share your travel experiences with others."
     />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-    />
+
     <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
       manifest.json provides metadata used when your web app is installed on a
