--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
       content="The new platform for sharing travelling tips and tricks between adventurous girls! Visit and share your travel experiences with others."
     />
     <meta property="fb:nostresstravelguide" content="nostresstravelguide" />
+    <meta property="og:url" content="https://www.nostresstravellers.com/#/" />
+    <meta
+      property="og:image"
+      content="https://www.nostresstravellers.com/public/images/No-stress-socialmedia.jpg"
+    />
     <!-- Twitter -->
     <meta property="twitter:title" content="No-Stress travel guide" />
     <meta
